--- a/estiloSASS.scss
+++ b/estiloSASS.scss
@@ -14,7 +14,7 @@ div.gridPrincipal{
     width: 100%;
     max-width: 1600px;
     display:grid;
-    grid-template-rows: 300px 700px 150px 50px;
+    grid-template-rows: 300px 300px 250px 50px;
     grid-template-columns: 15vw 53vw 32vw;
     grid-template-areas: "header animacion animacion"
                         "header  main  main"
@@ -123,7 +123,7 @@ main{
 
     .cards{ display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 25% 25% 25% 25%;
+        grid-template-rows: 50% 50%;
         grid-gap: 30px;
         grid-template-areas: "section1 section2"
                             "section3 section4";
@@ -141,13 +141,17 @@ main{
                 max-width: 100%;
                 max-height: 100%;
                 position: relative;
+                margin-top:20px;
+                margin-bottom: 20px;
                 cursor:pointer;
                     h2{
                         color:crimson;
                         text-align: center;}
                     img{
                     height: 100%;
-                    width: 100%;}    
+                    width: 100%;}   
+                        :hover {
+                        box-shadow: 3px 3px 3px 3px black;} 
                 
             }
             &__2{
@@ -161,6 +165,8 @@ main{
                 max-height: 100%;
                 position: relative;
                 cursor:pointer;
+                margin-top:20px;
+                margin-bottom: 20px;
 
                     h2{
                         color:crimson;
@@ -168,6 +174,8 @@ main{
                     img{
                         height: 100%;
                         width: 100%;}
+                        :hover {
+                            box-shadow: 3px 3px 3px 3px black;}
     }
 
             &__3{
@@ -180,6 +188,7 @@ main{
                 max-width: 100%;
                 max-height: 100%;
                 position: relative;
+                margin-top:20px;
                 cursor:pointer;
                     h2{
                         color:crimson;
@@ -187,6 +196,8 @@ main{
                     img{
                         height: 100%;
                         width: 100%;}
+                        :hover {
+                            box-shadow: 3px 3px 3px 3px black;}
     }
 
             &__4{
@@ -199,6 +210,7 @@ main{
                 max-width: 100%;
                 max-height: 100%;
                 position: relative;
+                margin-top:20px;
                 cursor:pointer;
             h2{
                 color:crimson;
@@ -206,6 +218,8 @@ main{
             img{
                 height: 100%;
                 width: 100%;}
+                :hover {
+                    box-shadow: 3px 3px 3px 3px black;}
             }
     }
 }
@@ -213,7 +227,7 @@ main{
 /* FOOTER */
 
     .footer{
-    background-color: #151B27;
+    background-color: #272640;
     grid-area: footer;
     flex-direction: column;
     display: flex;
@@ -229,6 +243,11 @@ main{
             flex-direction: row;
             justify-content: space-evenly;
             list-style: none;
+            :hover{
+                background-color: rgb(70, 68, 67);
+                box-shadow: 3px 3px crimson;
+                text-decoration: none;
+                color: rgb(232, 241, 241) }
         
             
         }
@@ -240,6 +259,10 @@ main{
             &--activo{
                 color:crimson;}
                 }
+        
+        
+
+        
         
     }
 
@@ -257,8 +280,8 @@ main{
                 margin: 0;
                 padding: 0;
                 text-align: center;
-                background-color: #151B27;
-                background-image: linear-gradient(to bottom,#151B27, #58657e);
+                background-color: #272640;
+                // background-image: linear-gradient(to bottom,#151B27, #58657e);
 
                 &__carita{
                     
@@ -277,7 +300,7 @@ main{
 
     .gridTorneos{
                 display:grid;
-                grid-template-rows: 300px 300px 100px 50px ;
+                grid-template-rows: 300px 800px 100px 50px ;
                 grid-template-columns: 14vw 43vw 43vw;
                 grid-template-areas: "header main main "
                                     "header  main  main"
@@ -294,9 +317,9 @@ main{
         grid-gap: 10px;
         grid-template-columns: 30vw 30vw 30vw;
         grid-template-rows: 46% 22% 22% ;
-        grid-template-areas: "torneo1 torneo1 promo"
-                            " torneo2  torneo3 promo"
-                            "torneo4 torneo5 promo";
+        grid-template-areas: "torneo1 torneo1 promo1"
+                            " torneo2  torneo3 promo2"
+                            "torneo4 torneo5 promo3";
         align-content: space-between;
         justify-content: space-between;
             
@@ -314,6 +337,7 @@ main{
                 font-size: 30px;
                 color:rgb(229, 238, 238);
                 cursor: pointer;
+                margin-left: 20px;
 
                 img{
                     height:100%;
@@ -330,6 +354,10 @@ main{
                 // position: relative;
                 text-align: center;
                 cursor: pointer;
+                margin-left: 20px;
+
+                :hover{
+                    box-shadow: 2px 2px rgb(190, 158, 165);}
 
                 img{
                     height:100%;
@@ -346,7 +374,11 @@ main{
                 // position: relative;
                 text-align: center;
                 cursor: pointer;
+                margin-left: 20px;
                 
+                :hover{
+                    box-shadow: 2px 2px rgb(190, 158, 165);}
+
                 img{
                     height:100%;
                     width: 100%;
@@ -359,8 +391,12 @@ main{
                 max-width: 100%;
                 max-height: 100%;
                 // position: relative;
+                margin-bottom: 30px;
                 text-align: center;
                 cursor: pointer;
+                margin-left: 20px;
+                :hover{
+                    box-shadow: 2px 2px rgb(190, 158, 165);}
             
             
                 img{
@@ -377,6 +413,11 @@ main{
                 // position: relative;
                 text-align: center;
                 cursor: pointer;
+                margin-bottom: 30px;
+                margin-left: 20px;
+
+                :hover{
+                    box-shadow: 2px 2px rgb(190, 158, 165);}
             
             
             img{
@@ -385,23 +426,43 @@ main{
                 }
             }
 
-            .promo {
-                
-                width: 50%;
-                height: 50%;
-                transition: width 12s, height 12s, margin 12s;
-                margin: 50px auto 0;
-            
-            :hover{
-                width: 100%;
-                height: 500px;
-                margin: 0 auto;
-                cursor: pointer }
-            
-                img{
-                    height: 50%;
-                    width: 50%;}
+            .shake-opacity{
+                grid-area: promo1;
+                img {
+                    height: 100%;
+                    width: 50%;
+
+
                 }
+            }
+
+            .shake-slow{
+                grid-area: promo2;
+                img {
+                    height: 100%;
+                    width: 50%;
+
+
+                }
+            }
+
+            // .promo {
+                
+            //     width: 50%;
+            //     height: 50%;
+            //     transition: width 12s, height 12s, margin 12s;
+            //     margin: 50px auto 0;
+            
+            // :hover{
+            //     width: 100%;
+            //     height: 500px;
+            //     margin: 0 auto;
+            //     cursor: pointer }
+            
+            //     img{
+            //         height: 50%;
+            //         width: 50%;}
+            //     }
             }
         }
 
@@ -536,15 +597,16 @@ main{
         
     div.gridPrincipal{
             grid-template-columns: 50vw 50vw;
-            grid-template-rows: 15vh 10vh 40vh 15vh 10vh;
+            grid-template-rows: 30% 50% 15% 5%;
             grid-gap: 1px;
-            grid-template-areas: "header  animacion"
+            grid-template-areas: 
                                     "header animacion"
                                     "main   main"
                                     "footer footer"
                                     " pais  firma"; 
             align-content: space-between;
-            height: 1000px;                    }
+            // height: 1000px;     
+                    }
         
         
         
@@ -572,23 +634,25 @@ main{
                 height: 237px;
             }}
         
-            main .cards{
+            main{ .cards{
                 display: grid;
                 grid-template-columns: 1fr 1fr;
-                grid-template-rows: 25% 25% 25% 25%;
+                grid-template-rows: 50% 50% ;
                 grid-gap: 50px;
                 grid-template-areas: "section1 section2"
                                         "section3 section4";
                 align-content: space-around;
                 justify-content: space-between;
-                margin: 20px 150px 20px 10px;
-                padding-top: 0px;
+                margin: 10px 150px 20px 10px;
+                padding-bottom: 50px;
                 grid-area: main;
+                
                 
                 }
                 
             .cards__1{
                 grid-area: section1;
+                margin-bottom: 0px;
                 
             }
         
@@ -598,6 +662,7 @@ main{
             }
             .cards__2{
                 grid-area: section2;
+                margin-bottom: 0px;
         
             }
             .cards__2 img{
@@ -607,6 +672,8 @@ main{
         
             .cards__3{
                 grid-area: section3;
+                margin-bottom: 0px;
+                margin-top: 0px;
         
             }
             .cards__3 img{
@@ -615,19 +682,21 @@ main{
             }
             .cards__4{
                 grid-area: section4;
+                margin-bottom: 0px;
+                margin-top: 0px;
         
             }
         
             .cards__4 img{
                 height: 100%;
                 width: 100%;
-            }
+            }}
                 footer{
-                    margin-top: 30px;
-                    margin-bottom: 20px;
-                    padding-top: 50px;
+                    margin: 0px;
+                    padding: 0px;
                     grid-area: footer;
-                    align-self:stretch;}
+                    align-self:stretch;
+                    background-color: #272640}
                 
         
             .pais{
@@ -635,12 +704,14 @@ main{
                 max-height: 100%;
                 justify-self: center;
                 align-self: end;
+                background-color: #272640;
             }
         
             .firma{grid-area: firma;
             max-height: 100%;
             justify-self: center;
-            align-self: end;}
+            align-self: end;
+            background-color: #272640}
             
             
 //NOTICIAS
@@ -800,6 +871,7 @@ header{ margin: 0 0 0 0;
                 }
         footer{
             grid-area: footer;
+            background-color: #272640
             }
         
         .footer__titulo{
@@ -813,11 +885,13 @@ header{ margin: 0 0 0 0;
         div.pais{
             grid-area: pais;
             align-self: end;
-            background-color: none;}
+            background-color: none;
+            background-color: #272640}
     
         div.firma{
             grid-area: firma;
             justify-self: start ;
+            background-color: #272640
         }
         
     
